# davinci_trajectory

./: CMakeLists.txt  package.xml  setup.py
models/: box.xml  myRaven.xml  myRavenWithBox.xml  myravenII_source.urdf  raven_with_workspace.zae
models/fixingRightGripper/: myRaven.urdf
msg/: ArmState.msg
scripts/: trajectory_runner
src/davinci_trajectory/: Constants.msg  both_homepose.py  data.mat  davinci_checkerboard.py  davinci_homepose.py  davinci_workspace.py  learnOpenRave.py  left_arm_poses.p  left_homepose.py  myDavinci.xml  myRaven.xml  py2mat.py  raven_arm.py  raven_controller.py  raven_planner.py  raven_planner_original.py  right_arm_poses.p  right_homepose.py
src/davinci_trajectory/bak/: myDavinci.urdf
src/davinci_trajectory/file/kinematics.0194e228ce5dccaffee7b1a6814f8514/: ikfast62.Transform6D.2_3_4_5_6_7.cpp  ikfast62.Transform6D.2_3_4_5_6_7.pp
